// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DotSteps renders correctly 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-1.emotion-1 {
  margin-right: 8px;
}

.emotion-2 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-2.emotion-2 {
  margin-right: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <div
      class="emotion-2"
    />
  </div>
</DocumentFragment>
`;

exports[`DotSteps renders correctly useState function 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-1.emotion-1 {
  margin-right: 8px;
}

.emotion-2 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-2.emotion-2 {
  margin-right: 8px;
}

.emotion-10 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-10.emotion-10 {
  margin-right: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <div
      class="emotion-2"
    />
    <div
      class="emotion-1"
    />
    <div
      class="emotion-1"
    />
    <div
      class="emotion-1"
    />
    <div
      class="emotion-1"
    />
    <div
      class="emotion-1"
    />
    <div
      class="emotion-1"
    />
    <div
      class="emotion-1"
    />
    <div
      class="emotion-10"
    />
  </div>
</DocumentFragment>
`;

exports[`DotSteps renders correctly wit 10 steps, default step=4 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-1.emotion-1 {
  margin-right: 8px;
}

.emotion-4 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-4.emotion-4 {
  margin-right: 8px;
}

.emotion-10 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-10.emotion-10 {
  margin-right: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <div
      class="emotion-1"
    />
    <div
      class="emotion-1"
    />
    <div
      class="emotion-4"
    />
    <div
      class="emotion-1"
    />
    <div
      class="emotion-1"
    />
    <div
      class="emotion-1"
    />
    <div
      class="emotion-1"
    />
    <div
      class="emotion-1"
    />
    <div
      class="emotion-10"
    />
  </div>
</DocumentFragment>
`;
